          system, an UCS-2 part is only saved (and sent) when needed. Messages containing 
          7bit characters only (0x00 - 0x7f, most latin characters) are safe to be sent as ansi.
          
        ! fixed bug with formatting buttons
        
        * removed "ding" sounds when using some hotkeys (Alt-S for example)
        
        * various langpack updates
        
Version 0.9.9.95pre7 - 2005/05/23

        * double click works again for closing tabs (even with button tabs)
        
        ! bugfix: redraw errors when restoring a maximized container
        
        + added a help window to the template editor describing all the variables and
          modifiers.
          
        * 2nd try to fix Ctrl-W and Ctrl-F4 (Win 9x only)
        
        + added option to force some extra redraws (options -> tabs and layout -> Force
          more aggressive window updates). If enabled, it will force additional re-
          draws.

        * optimized visual styles rendering on the tab control. Don't draw unneeded stuff.
        
Version 0.9.9.95pre6 - 2005/05/20

        ! bugfix - tab control did not use the proper visual style part for leftmost
          tabs.
          
        ! bugfix - in some cases, the wrong font was used for drawing the tab labels
          so that they appeared oversized and clipped (or the opposite which resulted
          in too much padding).

        ! fixed Ctrl-W and Ctrl-F4 causing crashes.
        
        * rewrote automatic container creation. Should be faster now, and hopefully
          with less problems.
          
        * changed visual style drawing method on tabs. Now, it uses real transparency
          so it should work with all visual styles w/o drawing problems or inaccuracies.
          
        ! when changing the style or theme, tab colors are re-read when using standard
          windows colors to draw tab labels and backgrounds.
                    